--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   # Service for the Ruby on Rails web application
   web:
+    # tty: true
+    # stdin_open: true
     build: .  # Build the service's image from the current directory
     command: bundle exec rails s -p 3000 -b '0.0.0.0'  # Command to start the Rails server
     ports:
@@ -9,13 +11,12 @@ services:
       - .:/app  # Mount the current directory inside the container
     depends_on:
       - db  # Specify dependency on the database service
-    environment:
-      DATABASE_URL: postgres://postgres:postgres@db:5432/rails_7_with_docker  # Database connection parameters
 
   # Service for the PostgreSQL database
   db:
     image: postgres:13  # Use the official PostgreSQL version 13 image
     ports:
+      - "0.0.0.0:5432:5432"
       - "5432:5432"  # Expose port for accessing the database
     volumes:
       - postgres_data:/var/lib/postgresql/data  # Create a volume for storing database data
