--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     # stdin_open: true
     build: .  # Build the service's image from the current directory
     command: bundle exec rails s -p 3000 -b '0.0.0.0'  # Command to start the Rails server
+    env_file: .env
     ports:
       - "3000:3000"  # Expose ports for accessing the application
     volumes:
@@ -24,6 +25,28 @@ services:
       POSTGRES_USER: postgres  # Set the username for database access
       POSTGRES_PASSWORD: postgres  # Set the password for database access
 
+  sidekiq:
+    build: .
+    env_file: .env
+    tty: true
+    stdin_open: true
+    container_name: sidekiq_debugrepo
+    command: 'bundle exec sidekiq --config config/sidekiq.yml' # Command to start Sidekiq
+    depends_on:
+      - web
+      - db
+      - redis
+
+  redis:
+    image: redis:6.2.0-alpine
+    container_name: redis_debugrepo
+    ports:
+      - "0.0.0.0:6379:6379"
+    volumes:
+      - redis:/data
+
+
 # Define a volume for storing PostgreSQL data
 volumes:
   postgres_data:
+  redis:
