--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   # Service for the Ruby on Rails web application
   web:
-    # tty: true
-    # stdin_open: true
+    tty: true
+    stdin_open: true
     build: .  # Build the service's image from the current directory
     command: bundle exec rails s -p 3000 -b '0.0.0.0'  # Command to start the Rails server
     env_file: .env
