--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
 
 test:
   <<: *default
-  database: debugrepo_development
+  database: debugrepo_test
 
 production:
   <<: *default
